# RLCourse

./: .envexample  .gitignore  README.md  start_vnc_grid_simulator.sh
assignment1/: README.md  pyproject.toml  run_grid_simulator.sh  start_vnc_grid_simulator.sh
assignment1/configs/: environment.yaml
assignment1/docs/: COMPLIANCE_STATUS.md  FILE_MANIFEST.md  FINAL_COMPLIANCE_REPORT.md  GETTING_STARTED.md  PRD.md  SUBMISSION_COMPLIANCE.md  TODO.md
assignment1/src/: main_grid.py
assignment1/src/app/: event_handler.py  training_loop.py
assignment1/src/environment/: grid_env.py  grid_obstacles.py  grid_rewards.py  grid_setup.py
assignment1/src/rl/: qtable_persistence.py
assignment1/src/utils/: config.py  logger.py
assignment1/src/visualization/: cell_renderer.py  grid_panel.py  menu_panel.py  notification_panel.py
assignment1/tests/: __init__.py  test_agent.py  test_environment.py  test_integration.py  test_obstacles.py  test_rewards.py
assignment2/: .env-example  .gitignore  README.md  pyproject.toml
assignment2/assets/: data_preview_features.md  data_preview_raw.md  pytest_output.txt
assignment2/configs/: rate_limits.json  setup.json  setup_improved.json
assignment2/docs/: CONVERSATION_LOG.md  EXECUTIVE_SUMMARY.md  PLAN.md  PRD.md  PRD_data_pipeline.md  PRD_double_dqn.md  PRD_dqn.md  PRD_dueling.md  PRD_env.md  PRD_features.md  PRD_per.md  PRD_reward.md  PROMPT_LOG.md  RESEARCH_REPORT.md  TODO.md  TOKEN_COSTS.md  architecture.mmd  class_diagram.mmd
assignment2/notebooks/: 01_results_analysis.ipynb
assignment2/results/: cross_ticker.json  dqn_vs_dueling.json  experiment_log.txt  experiments_summary.md  improvement_comparison.json  model_proof.json  reward_variants.json  uniform_vs_per.json  window_sensitivity.json
assignment2/saved_models/: best_improved.pt
assignment2/scripts/: capture_gui_screenshots.py  generate_plots.py  plot_differentiators.py  rebacktest_all.py  run_differentiators.py  run_experiments.py  run_improved.py
assignment2/src/dqn_trader/: __init__.py
assignment2/tests/: conftest.py
assignment2/tests/integration/: test_backtest_service.py  test_cli.py  test_data_service.py  test_experiment_service.py  test_sdk.py  test_training_smoke.py
assignment2/tests/unit/: test_analysis_service.py  test_config.py  test_dqn_agent.py  test_dueling_dqn.py  test_epsilon_schedule.py  test_feature_engineer.py  test_gatekeeper.py  test_gui_smoke.py  test_inference_service.py  test_portfolio.py  test_prioritized_replay.py  test_reward.py  test_risk_metrics.py  test_scaler.py  test_seed.py  test_splitter.py  test_sum_tree.py  test_trading_env.py  test_uniform_replay.py  test_window_builder.py  test_yfinance_client.py
assignment3/: .env-example  .gitignore  README.md  pyproject.toml
assignment3/assets/plots/: _summary.json
assignment3/configs/: setup.json
assignment3/docs/: EXECUTIVE_SUMMARY.md  PLAN.md  PRD.md  PRD_a2c.md  PRD_action_masking.md  PRD_data.md  PRD_env.md  PRD_lstm_world_model.md  PRD_ppo.md  PRD_reinforce.md  PRD_reward.md  TODO.md
assignment3/notebooks/: fitness_rl_walkthrough.ipynb
assignment3/saved_models/: world_model.pt
assignment3/scripts/: capture_gui.py  generate_architecture_diagram.py  generate_layer13_plots.py  generate_layer15_plots.py  generate_plots.py  run_layer12_diagnostics.py  run_layer13_studies.py  run_layer15_full.py
assignment3/tests/: conftest.py
assignment4/: .env-example  .gitignore  README.md  pyproject.toml
assignment4/configs/: setup.json
assignment4/docs/: COSTS.md  EXECUTIVE_SUMMARY.md  PLAN.md  PRD.md  PRD_actor_critic.md  PRD_gae.md  PRD_graphify.md  PRD_mujoco_env.md  PRD_ppo.md  PROMPTBOOK.md  REPRODUCIBILITY.md  TODO.md
assignment4/notebooks/: proximal_lab_walkthrough.ipynb
assignment4/saved_models/: HalfCheetah-v5.pt  Walker2d-v5.pt
assignment4/scripts/: capture_gui.py  generate_plots.py  plot_architecture.py  plot_clipped_surrogate.py  render_policy_gif.py  run_cross_env.py  run_gae_ablation.py  run_lambda_multiseed.py  run_sweeps.py
assignment5/: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
assignment5/configs/: setup.json
assignment5/docs/: AUDIT.md  COMPARISON_TABLE.md  COSTS.md  EXECUTIVE_SUMMARY.md  FAILURE_MODES.md  LESSONS_LEARNED.md  PLAN.md  PRD.md  PRD_ddpg.md  PRD_exploration_noise.md  PRD_lidar_sensor.md  PRD_simulator.md  PRD_soft_target_updates.md  PROMPTBOOK.md  REPRODUCIBILITY.md  SLIDE_MAP.md  TODO.md
assignment5/notebooks/: roomba_lab_walkthrough.ipynb
assignment5/saved_models/: headline_policy.pt  headline_policy_50k.pt  headline_policy_tuned.pt  headline_policy_v2.pt  headline_policy_v3_small.pt  headline_policy_v4_goal.pt
assignment5/scripts/: extract_gif_frames.py  plot_algorithm_comparison.py  plot_sweep.py  render_arch_diagram.py  render_sigma_comparison.py  render_sigma_comparison_long.py  run_algorithm_comparison.py  run_cross_apartment.py  run_noise_sigma_sweep.py  run_per_episode_stats.py  run_random_baseline.py  run_tau_sweep.py  run_true_on_policy.py  train_and_visualise.py  train_v2_boosted_reward.py  train_v3_small_net.py  train_v4_goal_conditioned.py
assignment6/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  preview.json  pyproject.toml
assignment6/configs/: setup.yaml  setup_iql.yaml  setup_maddpg.yaml  setup_qplex.yaml  setup_vdn.yaml
assignment6/docs/: BONUS.md  CHANGELOG.md  FAILURE_MODES.md  PLAN.md  PRD.md  PRD_ctde.md  PRD_dec_pomdp.md  PRD_game.md  PRD_gmail.md  PRD_iql_baseline.md  PRD_mcp.md  PRD_olora.md  PRD_partial_observation.md  PROOFS.md  TODO.md
assignment6/notebooks/: marl_walkthrough.ipynb  marl_walkthrough.py  marl_walkthrough_executed.ipynb
assignment6/saved_models/: iql_shaped.pt  maddpg_shaped.pt  qmix_curriculum.pt  qmix_final.pt  qmix_shaped.pt  qplex_shaped.pt  vdn_shaped.pt
assignment6/scripts/: audit.py  bonus_demo.py  demo_token_rotation.py  elo_tournament.py  evaluate_checkpoint.py  generate_artifacts.py  long_convergence_study.py  q3_swarm_vs_single.py  rebuild_notebook.py  scale_convergence_study.py
assignment6/tests/: conftest.py
(+449 files in other folders)
