[project]
name = "dqn-trader"
version = "1.00"
description = "Dueling Double DQN with Prioritized Experience Replay on Yahoo Finance daily data — an educational RL project."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Educational use only" }
authors = [
    { name = "Shaked Kozlovsky", email = "shaked1221997@gmail.com" },
]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pyarrow>=15",
    "yfinance>=0.2.40",
    "torch>=2.2",
    "gymnasium>=0.29",
    "matplotlib>=3.8",
    "click>=8.1",
    "PyQt6>=6.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1",
]

[project.scripts]
dqn-trader = "dqn_trader.interface.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dqn_trader"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/dqn_trader"]
branch = true
omit = [
    "src/dqn_trader/interface/gui/*",
    "src/dqn_trader/**/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
