[project]
name = "proximal-lab"
version = "1.00"
description = "PPO + GAE laboratory on MuJoCo continuous control — Assignment 4. Implements Schulman et al. 2017 (PPO clipped surrogate) and Schulman et al. 2016 (GAE), with a mini-Graphify tool that auto-builds an Obsidian-compatible knowledge graph from the project's Python AST."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Educational use only" }
authors = [
    { name = "Shaked Kozlovsky", email = "shaked1221997@gmail.com" },
]
dependencies = [
    "numpy>=1.26,<3",
    "torch>=2.2",
    "gymnasium[mujoco]>=0.29",
    "mujoco>=3.0",
    "matplotlib>=3.8",
    "click>=8.1",
    "PyQt6>=6.6",
    "tqdm>=4.66",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1",
]

[project.scripts]
proximal-lab = "proximal_lab.interface.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proximal_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/proximal_lab"]
branch = true
omit = [
    "src/proximal_lab/interface/gui/*",
    "src/proximal_lab/**/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
