[project]
name = "roomba-lab"
version = "1.00"
description = "Assignment 5 — Custom 2D cleaning-robot simulator (no Gym, no Gazebo) on real HouseExpo apartment maps, controlled by a from-scratch DDPG agent. The central pedagogical point is **DDPG on a continuous action space** (forward velocity + steering ∈ [−1, 1]) where DQN-style discretisation would combinatorially explode."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Educational use only" }
authors = [
    { name = "Shaked Kozlovsky", email = "shaked1221997@gmail.com" },
]
dependencies = [
    "numpy>=1.26,<3",
    "torch>=2.2",
    "matplotlib>=3.8",
    "click>=8.1",
    "PyQt6>=6.6",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "imageio>=2.34",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1",
]

[project.scripts]
roomba-lab = "roomba_lab.interface.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roomba_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/roomba_lab"]
branch = true
omit = [
    "src/roomba_lab/interface/gui/*",
    "src/roomba_lab/**/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
